test/libyul/yulSyntaxTests/for_expr_invalid_5.yul
{
	for {} mload {} {}
}
// ----
// ParserError 2314: (16-17): Expected '(' but got '{'
